--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+   <link rel="icon" type="image/x-icon" href="/favicon.ico">
+ <link rel="icon" type="image/png" href="/logo-32x32.png"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Account Dashboard | UI Hackathon Submission</title>
+
+    <meta name="description" content="Submission for the Frontend UI Hackathon 2025, showcasing E-commerce account management and reward status dashboard interfaces built with React, Vite, and Tailwind CSS." />
+
   </head>
   <body>
     <div id="root"></div>
