--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-adsense-account" content="ca-pub-7136589254575741">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
    <link rel="icon" type="image/x-icon" href="/favicon.ico">
